--- a/onlinenews-backend/news/src/main/resources/application.yml
+++ b/onlinenews-backend/news/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/online_news
     username: root
-    password: abc123456
+    password: vp9jnhmi
     driver-class-name: com.mysql.cj.jdbc.Driver
   servlet:
     multipart:
